# CAMEL_core

./: .gitlab-ci.yml  README.md  pyproject.toml
camelcore/app/: command.py  errors.py  logger.py  testsuite.py
camelcore/app/io/: toolio.py  tooliodirectory.py  tooliofile.py  tooliovalue.py
camelcore/app/reports/: htmlbase.py  htmlcitation.py  htmlelement.py  htmlexpandablediv.py  htmlexpandabletable.py  htmlreport.py  htmlreportsection.py  htmltablecell.py  htmltableformatter.py
camelcore/app/utils/: fastautils.py  fastqutils.py  fileutils.py  galaxyutils.py  reportutils.py  sambamutils.py  snakeutils.py  vcfutils.py
camelcore/resources/: __init__.py
camelcore/resources/tests/: fq_1.fq  fq_2.fq  interleaved.fq  toy.sam  toy_with_dupl.fasta  workflow_test.smk
camelcore/tests/: test_command.py
camelcore/tests/reports/: test_htmlreport.py  test_htmltableformatter.py
camelcore/tests/snakemake/: test_snakeutils.py
camelcore/tests/utils/: test_fastautils.py  test_fastqutils.py  test_fileutils.py  test_sambamutils.py  test_vcfutils.py
